Fixed overlapping tags

--- a/style.css
+++ b/style.css
@@ -258,7 +258,7 @@ main {
 
 article {
   display: flex;
-  height: 350px;
+  height: 375px;
   margin-bottom: 2rem;
   background-color: white;
   border: 1px solid #dddcdc;
@@ -307,6 +307,8 @@ article .tags {
   background-color: #751f7c;
   border-radius: 3px;
   padding: 3px;
+  display: inline-block;
+  margin-bottom: 0.5em;
 }
 
 .meta-info {
